FFE-209 fix default layout for responsive tables on small screens

--- a/less/expandable-row.less
+++ b/less/expandable-row.less
@@ -15,6 +15,12 @@
         &--expanded:not(:last-child) {
             border-color: @ffe-blue-pale;
         }
+
+        .ffe-responsive-table__content {
+            @media screen and (max-width: @breakpoint-sm) {
+                margin-bottom: 0;
+            }
+        }
     }
 
     &__row-expandable-content {
